--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -3,6 +3,18 @@ $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
 $color-grey-dark: #777;
+$color-grey-light: #eee;
+$color-grey-1: #f7f7f7;
 $color-white: #fff;
 $color-black: #000;
 // </colors>
+
+// <Font Size>
+    $default-font-size: 1.6rem;
+// </Font Size>
+
+// <Grid>
+$grid-width: 114rem;
+$gutter-vertical: 8rem;
+$gutter-horizontal: 6rem;
+// </Grid>
