--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,29 +1,63 @@
 body {
-    font-family: "lato", sans-serif;
-    font-weight: 400;
-    line-height: 1.7;
-    color: $color-grey-dark;
-    padding: 3rem;
-  }
+  font-family: "lato", sans-serif;
+  font-weight: 400;
+  line-height: 1.7;
+  color: $color-grey-dark;
+  padding: 3rem;
+}
 
 .heading-primary {
-    color: $color-white;
-    text-transform: uppercase;
-    backface-visibility: hidden;
-    margin-bottom: 6rem;
-    &--main {
-      display: block;
-      font-weight: 400px;
-      font-size: 6rem;
-      letter-spacing: 3.5rem;
-      animation: moveInLeft 1s ease-out;
-    }
-  
-    &--sub {
-      display: block;
-      font-weight: 700;
-      font-size: 2rem;
-      letter-spacing: 1.75rem;
-      animation: moveInRight 1s ease-out;
-    }
+  color: $color-white;
+  text-transform: uppercase;
+  backface-visibility: hidden;
+  margin-bottom: 6rem;
+  &--main {
+    display: block;
+    font-weight: 400px;
+    font-size: 6rem;
+    letter-spacing: 3.5rem;
+    animation: moveInLeft 1s ease-out;
   }
+
+  &--sub {
+    display: block;
+    font-weight: 700;
+    font-size: 2rem;
+    letter-spacing: 1.75rem;
+    animation: moveInRight 1s ease-out;
+  }
+}
+
+.heading-secondary {
+  display: inline-block;
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  background-image: linear-gradient(
+    to right,
+    $color-primary-light,
+    $color-primary-dark
+  );
+  -webkit-background-clip: text;
+  color: transparent;
+  letter-spacing: .2rem;
+  transition: all .2s;
+
+  &:hover {
+    transform: skewY(22deg) skewX(15deg);
+    text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
+  }
+}
+
+.heading-tertiary {
+  font-size: $default-font-size;
+  font-weight: 700;
+  text-transform: uppercase
+}
+.paragraph {
+  font-size: $default-font-size;
+  
+  &:not(:last-child){
+    margin-bottom: 3rem;
+  }
+}
