--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,17 +1,21 @@
-@import "abstract/functions";
-@import "abstract/mixins";
-@import "abstract/variables";
+@import 'abstract/functions';
+@import 'abstract/mixins';
+@import 'abstract/variables';
 
-@import "base/animations";
-@import "base/base";
-@import "base/typography";
-@import "base/utilities";
+@import 'base/animations';
+@import 'base/base';
+@import 'base/typography';
+@import 'base/utilities';
 
-@import "components/btn";
-@import "components/composition";
-@import "components/feature-box";
+@import 'components/btn';
+@import 'components/composition';
+@import 'components/feature-box';
+@import 'components/cards';
+@import 'components/story';
+@import 'components/bg-video';
+@import 'components/form';
 
-@import "layout/header";
-@import "layout/grid";
+@import 'layout/header';
+@import 'layout/grid';
 
-@import "pages/home";
+@import 'pages/home';
